# spline3

./: .gitignore  CMakeLists.txt  LICENSE  README.md  test.cpp
include/: io.hpp  random.hpp  regression.hpp  spline3.hpp  spline3.tpp  tridiagonal_matrix.hpp  tridiagonal_matrix.tpp
test/: CMakeLists.txt  main_TestAll.cpp
test/include/: spline3_test.hpp  tridiagonal_matrix_test.hpp
